--- a/news/src/main/resources/templates/pages/recommendations.html
+++ b/news/src/main/resources/templates/pages/recommendations.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>추천</title>
   <link rel="stylesheet" th:href="@{/css/style.css}" />
   <style>
